generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Building {
  id        Int      @id @default(autoincrement())
  name      String
  address   String?
  createdAt DateTime @default(now())
  rooms     Room[]
}

model Room {
  id         Int        @id @default(autoincrement())
  name       String
  floor      Int        @default(1) // Added floor
  area       Float?
  price      Float
  depositPrice Float?     // Added deposit price
  maxTenants Int        @default(2)
  status     RoomStatus @default(AVAILABLE)
  gender     Gender     @default(ALL) // Added gender restriction
  buildingId Int
  assets     Json?
  contracts  Contract[]
  issues     Issue[]
  building   Building   @relation(fields: [buildingId], references: [id])
}

model Tenant {
  id        Int        @id @default(autoincrement())
  fullName  String
  phone     String     @unique
  cccd      String?
  info      Json?
  contracts Contract[]
}

model Contract {
  id             Int              @id @default(autoincrement())
  startDate      DateTime
  endDate        DateTime?
  deposit        Float
  price          Float
  paymentDay     Int              @default(5) // Added paymentDay
  isActive       Boolean          @default(true)
  roomId         Int
  tenantId       Int
  initialIndexes Json?
  numTenants     Int              @default(1)
  room           Room             @relation(fields: [roomId], references: [id])
  tenant         Tenant           @relation(fields: [tenantId], references: [id])
  invoices       Invoice[]
  readings       ServiceReading[]
}

model Service {
  id              Int              @id @default(autoincrement())
  name            String
  price           Float
  unit            String
  type            ServiceType
  isActive        Boolean          @default(true)
  calculationType CalculationType  @default(PER_ROOM)
  readings        ServiceReading[]
}

model ServiceReading {
  id           Int      @id @default(autoincrement())
  month        String
  invoiceId    Int?
  contractId   Int
  createdAt    DateTime @default(now())
  isBilled     Boolean  @default(false)
  newIndex     Float
  oldIndex     Float
  readingDate  DateTime @default(now())
  serviceId    Int
  totalCost    Float
  unitPrice    Float
  updatedAt    DateTime @updatedAt
  usage        Float
  isMeterReset Boolean  @default(false)
  note         String?
  contract     Contract @relation(fields: [contractId], references: [id], onDelete: Cascade)
  service      Service  @relation(fields: [serviceId], references: [id])

  @@unique([contractId, serviceId, month])
}

model Invoice {
  id             Int           @id @default(autoincrement())
  month          String
  paidAmount     Float         @default(0)
  status         InvoiceStatus @default(DRAFT)
  contractId     Int
  createdAt      DateTime      @default(now())
  debtAmount     Float         @default(0)
  discount       Float         @default(0)
  dueDate        DateTime?
  extraCharge    Float         @default(0)
  lineItems      Json
  note           String?
  paymentHistory Json?
  previousDebt   Float         @default(0)
  publishedAt    DateTime?
  roomCharge     Float
  serviceCharge  Float
  totalAmount    Float
  updatedAt      DateTime      @updatedAt
  contract       Contract      @relation(fields: [contractId], references: [id])

  @@unique([contractId, month])
}

model Issue {
  id          Int      @id @default(autoincrement())
  title       String
  description String?
  status      String   @default("OPEN")
  roomId      Int
  createdAt   DateTime @default(now())
  room        Room     @relation(fields: [roomId], references: [id])
}

enum RoomStatus {
  AVAILABLE
  RENTED
  MAINTENANCE
}

enum ServiceType {
  INDEX
  FIXED
}

enum CalculationType {
  PER_ROOM
  PER_PERSON
  PER_USAGE
}

enum InvoiceStatus {
  DRAFT
  PUBLISHED
  PARTIAL
  PAID
  OVERDUE
  CANCELLED
}

enum Gender {
  ALL
  MALE
  FEMALE
}
